objects/Sales_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <formula>Account__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Order</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COND_P_UNT__c</fullName>
        <label>COND P UNT</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COND_UNIT__c</fullName>
        <label>COND UNIT</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURRENCY__c</fullName>
        <label>CURRENCY</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER__c</fullName>
        <label>CUSTOMER</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_TIMESTAMP__c</fullName>
        <label>OM Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Sold_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Order (Contract Sold To Account)</relationshipLabel>
        <relationshipName>Sales_Order2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Sold_To__c</fullName>
        <label>Contract Sold To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Part__c</fullName>
        <label>Customer part#</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Item</label>
        <referenceTo>Customer_Item__c</referenceTo>
        <relationshipLabel>Sales Order</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DELIV_ITEM__c</fullName>
        <label>Delivery Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOCDATE__c</fullName>
        <label>Order date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doc_Number__c</fullName>
        <label>Sales order number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ERP Device</label>
        <referenceTo>ERP_Device__c</referenceTo>
        <relationshipLabel>Sales Order</relationshipLabel>
        <relationshipName>Sales_Order1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up on account for end customer</description>
        <label>End Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Order (Account)</relationshipLabel>
        <relationshipName>Sales_Order1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <label>End Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Itm_Number__c</fullName>
        <label>Line Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Part#</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NET_PRICE__c</fullName>
        <label>Price</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_VALUE__c</fullName>
        <label>NET VALUE</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_ITEM_NO__c</fullName>
        <label>PO Item#</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_STAT_H__c</fullName>
        <label>PRC STAT H</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Desc__c</fullName>
        <label>Part description</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <formula>Cust_Part__c +&apos; &apos;+&apos;:&apos; + &apos; &apos;+ Material__c  +&apos; &apos;+ &apos;:&apos;+&apos; &apos;  + Part_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purch_No__c</fullName>
        <label>Purchase order number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REC_TYPE__c</fullName>
        <label>REC TYPE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REF_QTY__c</fullName>
        <label>REF QTY</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REJECT_CODE__c</fullName>
        <label>REJECT CODE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQ_DATE_H__c</fullName>
        <label>REQ DATE H</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Req_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Req_Qty__c</fullName>
        <label>Request Quantity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SALES_UNIT__c</fullName>
        <label>SALES UNIT</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Id__c</fullName>
        <externalId>true</externalId>
        <label>Sales Order Id</label>
        <length>245</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Short_Text__c</fullName>
        <label>Short Text</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stat_Type__c</fullName>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZGPARTNER__c</fullName>
        <label>ZGPARTNER</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Doc_Number__c</columns>
        <columns>Sales_Order_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>GFV_Report_Sharing__c</fullName>
        <label>GFV Report Sharing</label>
    </sharingReasons>
</CustomObject>